--- a/nagoyameshi2/src/main/resources/templates/admin/restaurants/show.html
+++ b/nagoyameshi2/src/main/resources/templates/admin/restaurants/show.html
@@ -61,7 +61,7 @@
 							</div>
 							
 							     <div class="col">
-								    <span th:text="${restaurant.getCategoryId()}"></span>
+								    <span th:text="${restaurant.getCategory().getName()}"></span>
 							     </div>
 						    </div>
 						
