--- a/nagoyameshi2/src/main/resources/templates/admin/restaurants/index.html
+++ b/nagoyameshi2/src/main/resources/templates/admin/restaurants/index.html
@@ -50,12 +50,12 @@
 									<tr th:each="restaurant : ${restaurantPage}">
 										<td th:text="${restaurant.getId()}"></td>
 										<td th:text="${restaurant.getName()}"></td>
-										<td th:text="${restaurant.getCategoryId()}"></td>
+										<td th:text="${restaurant.getCategory().getName()}"></td>
 										<td th:text="${restaurant.getPostalCode()}"></td>
 										<td th:text="${restaurant.getAddress()}"></td>
 										<td th:text="${restaurant.getPhoneNumber()}"></td>
 										<td><a th:href="@{/admin/restaurants/__${restaurant.getId()}__}">詳細</a></td>
-										<td><a href="#" class="nagoyameshi-link-danger" data-bs-toggle="modal" th:data-bs-target="${'#deleteHouseModal' + restaurant.getId()}">削除</a></td>
+										<td><a href="#" class="nagoyameshi-link-danger" data-bs-toggle="modal" th:data-bs-target="${'#deleteRestaurantModal' + restaurant.getId()}">削除</a></td>
 										
 										<!-- 削除用モーダル-->
 										<div class="modal fade" th:id="${'deleteRestaurantModal' + restaurant.getId()}" tabindex="-1" th:aria-labelledby="${'deleteRestaurantModalLabel' + restaurant.getId()}">
@@ -67,7 +67,7 @@
 													</div>
 													<div class="modal-footer">
 														<form method="post" th:action="@{/admin/restaurants/__${restaurant.getId()}__/delete}">
-															<button type="submit" class="btn samuraitravel-btn-danger text-white shadow-sm">削除</button>
+															<button type="submit" class="btn nagoyameshi-btn-danger text-white shadow-sm">削除</button>
 														</form>
 													</div>
 												</div>
@@ -87,7 +87,7 @@
 										</li>
 										<li th:each="i : ${#numbers.sequence(0, restaurantPage.getTotalPages() -1)}" class="page-item">
 											<span th:if="${i == restaurantPage.getNumber()}" class="page-link active nagoyameshi-active" th:text="${i +1}"></span>
-											<a th:unless="${i == restaurant.getNumber()}" th:href="@{/admin/restaurants(page = ${i}, keyword = ${keyword})}" class="page-link nagoyameshi-page-link" th:text="${i + 1}"></a>
+											<a th:unless="${i == restaurantPage.getNumber()}" th:href="@{/admin/restaurants(page = ${i}, keyword = ${keyword})}" class="page-link nagoyameshi-page-link" th:text="${i + 1}"></a>
 										</li>
 										<li class="page-item">
 											<span th:if="${restaurantPage.isLast()}" class="page-link disabled">次</span>
