--- a/nagoyameshi2/src/main/resources/templates/admin/users/index.html
+++ b/nagoyameshi2/src/main/resources/templates/admin/users/index.html
@@ -21,7 +21,7 @@
 							 <div class="d-flex justify-content-between align-items-end">
 								 <form method="get" th:action="@{/admin/users}"class="mb-3">
 									 <div class="input-group">
-										 <input type="text" class="form-control" name="keyword" th:value="${keyword}" placeholder="氏名">
+										 <input type="text" class="form-control" name="keyword" th:value="${keyword}" placeholder="メールアドレス">
 										 <button type="submit" class="btn text-white shadow-sm nagoyameshi-btn">検索</button>
 									 </div>
 								 </form>
