途中チェック

--- a/nagoyameshi2/src/main/resources/templates/auth/login.html
+++ b/nagoyameshi2/src/main/resources/templates/auth/login.html
@@ -39,6 +39,10 @@
 									会員登録
 								</a>
 							</div>
+							<div class="text-center">
+							<a th:href="@{/reset}">
+								パスワードを忘れた場合はこちら
+						</div>
 						</div>
 					</div>
 				</div>
