--- a/nagoyameshi2/src/main/resources/templates/fragment.html
+++ b/nagoyameshi2/src/main/resources/templates/fragment.html
@@ -45,8 +45,27 @@
 								<a class="nav-link" th:href="@{/signup}">会員登録</a>
 							</li>
 							
-							<!-- ログイン済みであれば表示する -->
+							<!-- 無料会員であれば表示する -->
 							<li class="nav-item dropdown" sec:authorize="hasRole('ROLE_GENERAL')">
+								<a id="navbarDropdownGeneral" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
+									<span sec:authentication="principal.user.name"></span>
+								</a>
+								
+								<div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownGeneral">
+									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user}">会員情報</a>
+									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user/changepaid}">有料会員に変更</a>
+									
+									<div class="dropdown-divider"></div>
+									
+									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/logout}" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
+										ログアウト
+									</a>
+									<form class="d-none" id="logout-form" th:action="@{/logout}"method="post"></form>
+								</div>
+							</li>
+							
+							<!-- 有料会員であれば表示する -->
+							<li class="nav-item dropdown" sec:authorize="hasRole('ROLE_PAYMENT')">
 								<a id="navbarDropdownGeneral" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
 									<span sec:authentication="principal.user.name"></span>
 								</a>
@@ -55,6 +74,7 @@
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user}">会員情報</a>
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/reservations}">予約一覧</a>
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/favorites}">お気に入り一覧</a>
+									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user/changefree}">無料会員に変更</a>
 									
 									<div class="dropdown-divider"></div>
 									
