--- a/nagoyameshi2/src/main/resources/templates/fragment.html
+++ b/nagoyameshi2/src/main/resources/templates/fragment.html
@@ -53,7 +53,7 @@
 								
 								<div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownGeneral">
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user}">会員情報</a>
-									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user/changepaid}">有料会員に変更</a>
+									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/subscription/add}">有料会員に変更</a>
 									
 									<div class="dropdown-divider"></div>
 									
@@ -74,7 +74,7 @@
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user}">会員情報</a>
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/reservations}">予約一覧</a>
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/favorites}">お気に入り一覧</a>
-									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user/changefree}">無料会員に変更</a>
+									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/subscription/cancel}">有料会員解約</a>
 									
 									<div class="dropdown-divider"></div>
 									
