--- a/nagoyameshi2/src/main/resources/templates/fragment.html
+++ b/nagoyameshi2/src/main/resources/templates/fragment.html
@@ -74,7 +74,7 @@
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/user}">会員情報</a>
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/reservations}">予約一覧</a>
 									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/favorites}">お気に入り一覧</a>
-									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/subscription/cancel}">有料会員解約</a>
+									<a class="dropdown-item nagoyameshi-dropdown-item" th:href="@{/subscription/cancelconfirm}">有料会員解約</a>
 									
 									<div class="dropdown-divider"></div>
 									
