--- a/nagoyameshi2/src/main/resources/templates/index.html
+++ b/nagoyameshi2/src/main/resources/templates/index.html
@@ -21,6 +21,11 @@
 						ログアウトしました。
 					</div>
 					
+				    <div th:if="${param.success}" class="alert alert-info">
+						<span>サブスクリプションの登録が完了しました(再読み込みのためログアウトを行って下さい)</span>
+					</div>
+
+					
 					<div th:if="${successMessage}" class="alert alert-info">
 						<span th:text="${successMessage}"></span>
 					</div>
@@ -51,6 +56,34 @@
 							</a>
 						</div>
 					</div>
+					
+					<div class="row justify-content-center">
+					<div class="col-xl-5 col-lg-6 col-md-8">
+
+						<h2 class="text-center mb-3">カテゴリから探す</h2>
+
+						<table class="table">
+							<tbody>
+								<tr>
+									<th></th>
+									<td>
+										<a th:href="@{/restaurants?category=中華}">中華</a>
+										<a th:href="@{/restaurants?category=イタリアン}" class="me-2">イタリアン</a>
+										<a th:href="@{/restaurants?category=アジア料理}" class="me-2">アジア料理</a>
+										<a th:href="@{/restaurants?category=韓国料理}" class="me-2">韓国料理</a>
+										<a th:href="@{/restaurants?category=洋食}" class="me-2">洋食</a>
+										<a th:href="@{/restaurants?category=和食}" class="me-2">和食</a>
+										<a th:href="@{/restaurants?category=焼き肉}" class="me-2">焼き肉</a>
+										<a th:href="@{/restaurants?category=ファーストフード}" class="me-2">ファーストフード</a>
+										<a th:href="@{/restaurants?category=居酒屋}" class="me-2">居酒屋</a>
+										<a th:href="@{/restaurants?category=ラーメン}" class="me-2">ラーメン</a>
+										<a th:href="@{/restaurants?category=カレー}" class="me-2">カレー</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				　　</div>
 				</div>
 			</main>
 			
