--- a/nagoyameshi2/src/main/resources/templates/subscription/cancelconfirm.html
+++ b/nagoyameshi2/src/main/resources/templates/subscription/cancelconfirm.html
@@ -35,11 +35,10 @@
 								<li class="list-group-item">・月額300円で利用可能</li>
 							</ul>
 						</div>
-
-						<form method="post" th:action="@{/subscription/cancel}" class="mb-5 nagoyameshi-search-form">
-							<button type="submit" >サブスクリプションを解約する</button>
+						
+						<form method="post" th:action="@{/subscription/cancel}">
+							<button type="submit" id="paymentButton" class="btn text-white shadow-sm w-100 nagoyameshi-btn">サブスクリプションを解約する</button>
                         </form>
-					
 				</div>
 
 			</div>
